changes from martin

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -57,6 +57,14 @@
 				<source>Person</source>
 				<target>Person</target>
 			</trans-unit>
+			<trans-unit id="tx_gtncarpooling_domain_model_trip.details">
+				<source>Details</source>
+				<target>Details</target>
+			</trans-unit>
+			<trans-unit id="tx_gtncarpooling_domain_model_trip.hasNeed">
+				<source>Needs</source>
+				<target>Nachfrage</target>
+			</trans-unit>
 			<trans-unit id="tx_gtncarpooling.is_required">
 				<source>* is required field</source>
 				<target>* Pflichtfeld</target>
