--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -48,7 +48,7 @@
 			<trans-unit id="tx_gtncarpooling_domain_model_trip.details">
 				<source>Details</source>
 			</trans-unit>
-			<trans-unit id="tx_gtncarpooling_domain_model_trip.has_need">
+			<trans-unit id="tx_gtncarpooling_domain_model_trip.hasNeed">
 				<source>Needs</source>
 			</trans-unit>
 			<trans-unit id="tx_gtncarpooling.is_required">
@@ -56,9 +56,6 @@
 			</trans-unit>
 			<trans-unit id="tx_gtncarpooling.create_trip">
 				<source>Create a trip</source>
-			</trans-unit>
-			<trans-unit id="tx_gtncarpooling.search_trip">
-			<source>Search for a ride</source>
 			</trans-unit>
 			<trans-unit id="tx_gtncarpooling.errorMessages.firstName">
 				<source>Please input a first name</source>
@@ -123,9 +120,6 @@
 			<trans-unit id="tx_gtncarpooling.sendMessage">
 				<source>Send message</source>
 			</trans-unit>
-			<trans-unit id="tx_gtncarpooling.contactAuthor">
-				<source>Contact author</source>
-			</trans-unit>
 			<trans-unit id="tx_gtncarpooling.email.subjectAfterTripCreated">
 				<source>New bifeb trip created</source>
 			</trans-unit>
@@ -182,9 +176,6 @@
 			</trans-unit>
 			<trans-unit id="tx_gtncarpooling.new_trip_formtitle">
 				<source>New trip</source>
-			</trans-unit>
-			<trans-unit id="tx_gtncarpooling.search_trip_formtitle">
-			<source>Search for a ride</source>
 			</trans-unit>
 			<trans-unit id="tx_gtncarpooling.trip_list_title">
 				<source>Trips list</source>
