--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -39,7 +39,7 @@
 			<trans-unit id="tx_gtncarpooling_domain_model_trip.delete_hash">
 				<source>Delete Hash</source>
 			</trans-unit>
-			<trans-unit id="tx_gtncarpooling_domain_model_trip.has_need">
+			<trans-unit id="tx_gtncarpooling_domain_model_trip.hasNeed">
 				<source>Needs</source>
 			</trans-unit>
 		</body>
